--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,18 +3,12 @@ site_name: Show Dialog
 nav:
   - Home:
       - Introduction: index.md
-      - Distribution: distribution.md
-      - UI: ui.md
-      - Update: update.md
-      - Test: test.md
-      - Release: release.md
-      - Tech stack: tech-stack.md
-      - Learning resources: learning-resources.md
+      - Development: development.md
 
 theme:
   name: material
-  logo: _assets/images/playground_icon.svg
-  favicon: _assets/images/playground_icon.svg
+  logo: _assets/images/window.svg
+  favicon: _assets/images/window.svg
   font:
     text: Arimo                 # Google font, replaces the default Arial
   features:
