--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+mashumaro==3.13.1
+    # via -r requirements.in
 pyside6==6.7.2
     # via -r requirements.in
 pyside6-addons==6.7.2
@@ -21,3 +23,5 @@ shiboken6==6.7.2
     #   pyside6
     #   pyside6-addons
     #   pyside6-essentials
+typing-extensions==4.12.2
+    # via mashumaro
