--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   pytest:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         # Min and max versions supported
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Install libEGL
+        # Implementation of the EGL (Embedded-Systems Graphics Library) API.
+        # No need to install on Windows or Mac.
         run: |
           sudo apt-get update -yqq
           sudo apt-get install -y libegl1-mesa
