--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,11 +5,14 @@ on:
 
 jobs:
   pytest:
-    runs-on: windows-latest
     strategy:
       matrix:
-        # Min and max versions supported
-        python-version: ['3.10', '3.11']
+        include:
+          - os: windows-latest
+            python-version: 3.11
+          - os: macos-latest
+            python-version: 3.10
+    runs-on: ${{ matrix.os }}
     name: Python ${{ matrix.python-version }}
     steps:
       - name: Checkout code
