--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,9 @@ jobs:
       matrix:
         include:
           - os: windows-latest
-            python-version: 3.11
+            python-version: '3.11'
           - os: macos-latest
-            python-version: 3.10
+            python-version: '3.10'
     runs-on: ${{ matrix.os }}
     name: Python ${{ matrix.python-version }}
     steps:
