--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
           - os: macos-latest
             python-version: '3.10'
     runs-on: ${{ matrix.os }}
-    name: Python ${{ matrix.python-version }}
+    name: Python ${{ matrix.python-version }} on ${{ runner.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,8 +27,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
+          python-version: '${{ matrix.python-version }}'
       - name: Install requirements
         run: |
           python -m pip install -U pip
