--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
           - os: macos-latest
             python-version: '3.10'
     runs-on: ${{ matrix.os }}
-    name: Python ${{ matrix.python-version }} on ${{ runner.os }}
+    name: Python ${{ matrix.python-version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
