--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,19 +5,29 @@ on:
 
 jobs:
   pytest:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        # Min and max versions supported
-        python-version: ['3.10', '3.11']
+        include:
+          - os: windows-latest
+            python-version: '3.11'
+          - os: macos-latest
+            python-version: '3.10'
+    runs-on: ${{ matrix.os }}
     name: Python ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install libEGL
+        # Implementation of the EGL (Embedded-Systems Graphics Library) API.
+        # No need to install on Windows or Mac.
+        run: |
+          sudo apt-get update -yqq
+          sudo apt-get install -y libegl1-mesa
+        if: runner.os == 'Linux'
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
+          python-version: '${{ matrix.python-version }}'
       - name: Install requirements
         run: |
           python -m pip install -U pip
