--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -18,5 +18,8 @@ pytest              # Test framework
 pytest-qt           # Qt plugin to allow user interaction
 exceptiongroup; python_version < '3.11'  # pytest 8.2+ dependency
 
+# Publishing
+twine               # Publish package
+
 # Installer
 pyinstaller         # Installer framework
