--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -19,7 +19,7 @@ pytest-qt           # Qt plugin to allow user interaction
 exceptiongroup; python_version < '3.11'  # pytest 8.2+ dependency
 
 # Publishing
-twine               # Publish package
+twine               # Package publishing
 
 # Installer
 pyinstaller         # Installer framework
