--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -19,7 +19,8 @@ pytest-qt           # Qt plugin to allow user interaction
 exceptiongroup; python_version < '3.11'  # pytest 8.2+ dependency
 
 # Publishing
-twine               # Package publishing
+build               # Build package
+twine               # Upload to Pypi
 
 # Installer
 pyinstaller         # Installer framework
