--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -12,6 +12,7 @@ flake8              # Linter
 isort               # Linter
 mypy                # Code inspector
 types-pyyaml        # Mypy type hints
+types-setuptools    # Mypy type hints
 
 # Test
 pytest              # Test framework
