--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -192,6 +192,8 @@ twine==5.1.1
     # via -r requirements-dev.in
 types-pyyaml==6.0.12.20240724
     # via -r requirements-dev.in
+types-setuptools==71.1.0.20240726
+    # via -r requirements-dev.in
 typing-extensions==4.12.2
     # via
     #   -r requirements.txt
