--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,50 @@
 # Configuration for tools that don't support `pyproject.toml`.
 
 [flake8]
-extend-exclude = src/ui/forms,.venv*,venv*,assets,docs,site,__pycache__
+extend-exclude = src/ui/forms,.venv*,venv*,.git,.github,assets,dist,docs,site,__pycache__
 max-line-length = 100
 # Errors being ignored:
-# E701 multiple statements on one line (colon)
+# E203 is not PEP8 compliant and clashes with black
+# E701,E704 multiple statements on one line (colon)
 #   Conflict with `black`, where empty class definitions (with Ellipsis) are formatted to be in
 #   one line in `black`, ex `class FileUpdateError(Exception): ...`
-ignore = E701
+# W503 line break before binary operator clashes with black
+ignore = E203,E701,E704,W503
+
+[metadata]
+name = show-dialog
+version = 0.1.0
+author = Joao Coelho
+author_email = 6wfon3p6d@mozmail.com
+description = Easily show a dialog
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/joaonc/show_dialog
+project_urls =
+    Documentation = https://joaonc.github.io/show_dialog
+    Source = https://github.com/joaonc/show_dialog
+classifiers =
+    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    Topic :: Software Development :: Build Tools
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+
+[options]
+package_dir =
+    = src
+packages = find:
+python_requires = >=3.10
+include_package_data = True
+
+[options.package_data]
+show_dialog = assets/stylesheets/*.css, assets/app.yaml
+
+[options.packages.find]
+where = src
+exclude =
+    tests
+    tests.*
