--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,7 @@ module = [
 [tool.pytest.ini_options]
 markers = ['pri_1', 'flaky', 'nightly', 'performance', 'manual']
 testpaths = ['tests']
+
+[build-system]
+requires = ['setuptools', 'wheel', 'pyyaml']
+build-backend = 'setuptools.build_meta'
