--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -12,11 +12,16 @@ flake8              # Linter
 isort               # Linter
 mypy                # Code inspector
 types-pyyaml        # Mypy type hints
+types-setuptools    # Mypy type hints
 
 # Test
 pytest              # Test framework
 pytest-qt           # Qt plugin to allow user interaction
 exceptiongroup; python_version < '3.11'  # pytest 8.2+ dependency
+
+# Publishing
+build               # Build package
+twine               # Upload to Pypi
 
 # Installer
 pyinstaller         # Installer framework
