--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,14 +6,22 @@
 #
 altgraph==0.17.4
     # via pyinstaller
+backports-tarfile==1.2.0
+    # via jaraco-context
 bandit==1.7.9
     # via -r requirements-dev.in
 black==24.4.2
     # via -r requirements-dev.in
 build==1.2.1
-    # via pip-tools
+    # via
+    #   -r requirements-dev.in
+    #   pip-tools
+certifi==2024.7.4
+    # via requests
 cfgv==3.4.0
     # via pre-commit
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via
     #   black
@@ -26,6 +34,8 @@ colorama==0.4.6
     #   pytest
 distlib==0.3.8
     # via virtualenv
+docutils==0.21.2
+    # via readme-renderer
 exceptiongroup==1.2.2 ; python_version < "3.11"
     # via
     #   -r requirements-dev.in
@@ -36,12 +46,26 @@ flake8==7.1.0
     # via -r requirements-dev.in
 identify==2.6.0
     # via pre-commit
+idna==3.7
+    # via requests
+importlib-metadata==8.2.0
+    # via
+    #   keyring
+    #   twine
 iniconfig==2.0.0
     # via pytest
 invoke==2.2.0
     # via -r requirements-dev.in
 isort==5.13.2
     # via -r requirements-dev.in
+jaraco-classes==3.4.0
+    # via keyring
+jaraco-context==5.3.0
+    # via keyring
+jaraco-functools==4.0.1
+    # via keyring
+keyring==25.2.1
+    # via twine
 markdown-it-py==3.0.0
     # via rich
 mashumaro==3.13.1
@@ -50,12 +74,18 @@ mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
+more-itertools==10.3.0
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 mypy==1.11.0
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
+nh3==0.2.18
+    # via readme-renderer
 nodeenv==1.9.1
     # via pre-commit
 packaging==24.1
@@ -73,6 +103,8 @@ pefile==2023.2.7
     # via pyinstaller
 pip-tools==7.4.1
     # via -r requirements-dev.in
+pkginfo==1.10.0
+    # via twine
 platformdirs==4.2.2
     # via
     #   black
@@ -88,7 +120,9 @@ pycodestyle==2.12.0
 pyflakes==3.2.0
     # via flake8
 pygments==2.18.0
-    # via rich
+    # via
+    #   readme-renderer
+    #   rich
 pyinstaller==6.9.0
     # via -r requirements-dev.in
 pyinstaller-hooks-contrib==2024.7
@@ -115,14 +149,28 @@ pytest==8.3.2
 pytest-qt==4.4.0
     # via -r requirements-dev.in
 pywin32-ctypes==0.2.2
-    # via pyinstaller
+    # via
+    #   keyring
+    #   pyinstaller
 pyyaml==6.0.1
     # via
     #   -r requirements.txt
     #   bandit
     #   pre-commit
+readme-renderer==44.0
+    # via twine
+requests==2.32.3
+    # via
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==1.0.0
+    # via twine
+rfc3986==2.0.0
+    # via twine
 rich==13.7.1
-    # via bandit
+    # via
+    #   bandit
+    #   twine
 semantic-version==2.10.0
     # via -r requirements.txt
 shiboken6==6.7.2
@@ -140,7 +188,11 @@ tomli==2.0.1
     #   mypy
     #   pip-tools
     #   pytest
+twine==5.1.1
+    # via -r requirements-dev.in
 types-pyyaml==6.0.12.20240724
+    # via -r requirements-dev.in
+types-setuptools==71.1.0.20240726
     # via -r requirements-dev.in
 typing-extensions==4.12.2
     # via
@@ -148,10 +200,16 @@ typing-extensions==4.12.2
     #   black
     #   mashumaro
     #   mypy
+urllib3==2.2.2
+    # via
+    #   requests
+    #   twine
 virtualenv==20.26.3
     # via pre-commit
 wheel==0.43.0
     # via pip-tools
+zipp==3.19.2
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
