--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,7 @@ disable_error_code = 'annotation-unchecked'
 
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
-module = [
-    'invoke', 'factory', 'PySide6', 'semantic_version'
-]
+module = ['invoke', 'factory', 'PySide6', 'semantic_version']
 
 [tool.pytest.ini_options]
 markers = ['pri_1', 'flaky', 'nightly', 'performance', 'manual']
