--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ max-line-length = 100
 #   Conflict with `black`, where empty class definitions (with Ellipsis) are formatted to be in
 #   one line in `black`, ex `class FileUpdateError(Exception): ...`
 # W503 line break before binary operator clashes with black
-ignore = E203,E701,E704,W503
+# F811 redefinition of unused import happens when importing pytest fixtures in test modules
+ignore = E203,E701,E704,W503,F811
 
 [metadata]
 name = show-dialog
