--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # Configuration for tools that don't support `pyproject.toml`.
 
 [flake8]
-extend-exclude = src/show_dialog/ui/forms,.venv*,venv*,.git,.github,assets,dist,docs,site,__pycache__
+extend-exclude = src/show_dialog/ui/forms,tests/libs/resources_rc.py,.venv*,venv*,.git,.github,assets,dist,docs,site,__pycache__
 max-line-length = 100
 # Errors being ignored:
 # E203 is not PEP8 compliant and clashes with black
