--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,8 @@ nav:
 
 theme:
   name: material
-  logo: _assets/images/window_icon.svg
-  favicon: _assets/images/window_icon.svg
+  logo: images/window_icon.svg
+  favicon: images/window_icon.svg
   font:
     text: Arimo                 # Google font, replaces the default Arial
   features:
