--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
 pyside6             # Qt
-semantic-version    # Semantic versioning
+semantic-version    # Semantic versioning, more useful than `packaging.version`
 pyyaml              # YAML functionality
 
 mashumaro           # JSON to class serialization
