--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -25,3 +25,6 @@ flit                # Build, install and upload to Pypi
 
 # Installer
 pyinstaller         # Installer framework
+
+# Other
+semantic-version    # Semantic versioning, more useful than `packaging.version`
