--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [tool.black]
 line-length = 100
-target-version = ['py311']
+target-version = ['py310']
 skip-string-normalization = true
 exclude='''
 (
@@ -30,7 +30,7 @@ skip_glob = ['**/.venv*', '**/venv*']
 # 1 The regex for all folders needs to be in a one line string.
 # 2 The `.` doesn't need to be escaped. Escape with `\\.` for a fully compatible regex.
 exclude = '^venv*|^.venv*|.git|.eggs|build|dist|.cache|.pytest_cache|.mypy_cache|.vscode|.idea|tasks.py|src/show_dialog/ui/forms'
-python_version = '3.11'
+python_version = '3.10'
 warn_return_any = true
 warn_unused_configs = true
 # Disable the warning below, from type hinting variables in a function.
@@ -46,5 +46,20 @@ markers = ['pri_1', 'flaky', 'nightly', 'performance', 'manual']
 testpaths = ['tests']
 
 [build-system]
-requires = ['setuptools', 'wheel', 'pyyaml']
-build-backend = 'setuptools.build_meta'
+requires = ['flit_core >=3.2,<4']
+build-backend = 'flit_core.buildapi'
+
+[project]
+name = 'show-dialog'
+version = '0.1.0'
+description = 'Easily show a dialog window for miscellaneous purposes.'
+readme = 'README.md'
+authors = [{name = 'Joao Coelho'}]
+license = {file = 'LICENSE'}
+dependencies = ['mashumaro', 'pyside6', 'pyyaml']
+
+[project.urls]
+Home = 'https://github.com/joaonc/show_dialog'
+
+[tool.flit.module]
+name = 'show_dialog'
