project name update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ requires = ['flit_core >=3.2,<4']
 build-backend = 'flit_core.buildapi'
 
 [project]
-name = 'show-dialog'
+name = 'qt-show-dialog'
 version = '0.1.0'
 description = 'Easily show a dialog window for miscellaneous purposes.'
 readme = 'README.md'
