--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ dependencies = ['mashumaro', 'pyside6', 'pyyaml']
 
 [project.urls]
 Home = 'https://github.com/joaonc/show_dialog'
+Documentation = 'https://joaonc.github.io/show_dialog'
 
 [tool.flit.module]
 name = 'show_dialog'
