--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -36,6 +36,7 @@ jinja2==3.1.4
     #   mkdocs-material
 markdown==3.6
     # via
+    #   -c requirements-dev.txt
     #   mdx-truly-sane-lists
     #   mkdocs
     #   mkdocs-material
