--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+markdown==3.6
+    # via -r requirements.in
 mashumaro==3.13.1
     # via -r requirements.in
 pyside6==6.7.2
