--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -150,6 +150,8 @@ stevedore==5.2.0
     # via bandit
 tomli-w==1.0.0
     # via flit
+types-markdown==3.6.0.20240316
+    # via -r requirements-dev.in
 types-pyyaml==6.0.12.20240724
     # via -r requirements-dev.in
 types-setuptools==71.1.0.20240726
