--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,6 @@ Documentation = 'https://joaonc.github.io/show_dialog'
 
 [tool.flit.module]
 name = 'show_dialog'
+
+[tool.flit.scripts]
+show_dialog = 'show_dialog.main:main'
