--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,5 +62,8 @@ dependencies = ['markdown', 'mashumaro', 'pyside6', 'pyyaml']
 Home = 'https://github.com/joaonc/show_dialog'
 Documentation = 'https://joaonc.github.io/show_dialog'
 
+[project.scripts]
+show_dialog = 'show_dialog.main:main'
+
 [tool.flit.module]
 name = 'show_dialog'
