--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ line_length = 100
 profile = 'black'
 sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
 skip = ['src/show_dialog/ui/forms']
-skip_glob = ['**/.venv*', '**/venv*']
+skip_glob = ['**/.venv*', '**/venv*', '/build']
 
 # flake8 not working with pyproject.toml
 #[tool.flake8]
