--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: tests
+name: Tests
 
 on:
   - pull_request
@@ -17,21 +17,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install libEGL
+
+      - name: Install libEGL (Linux only)
         # Implementation of the EGL (Embedded-Systems Graphics Library) API.
         # No need to install on Windows or Mac.
         run: |
           sudo apt-get update -yqq
           sudo apt-get install -y libegl1-mesa
         if: runner.os == 'Linux'
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '${{ matrix.python-version }}'
+
       - name: Install requirements
         run: |
           python -m pip install -U pip
           python -m pip install -r requirements-dev.txt
+
       - name: Run tests
         # Test folder(s) configured in `pyproject.toml`
         run: |
