--- a/.github/workflows/build-asset.yml
+++ b/.github/workflows/build-asset.yml
@@ -38,6 +38,11 @@ jobs:
       - name: Build app
         run: inv build.app
 
+      - name: Authenticate GH CLI
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh auth login --with-token
+
       - name: Upload to GitHub release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
