--- a/.github/workflows/build-asset.yml
+++ b/.github/workflows/build-asset.yml
@@ -16,6 +16,10 @@ on:
           - windows-latest
           - ubuntu-latest
 
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   build-app:
     runs-on: ${{ github.event.inputs.os }}
@@ -37,11 +41,6 @@ jobs:
 
       - name: Build app
         run: inv build.app
-
-      - name: Authenticate GH CLI
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh auth login --with-token
 
       - name: Upload to GitHub release
         env:
