--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,9 @@ readme = 'README.md'
 authors = [{name = 'Joao Coelho'}]
 license = {file = 'LICENSE'}
 dependencies = ['markdown', 'mashumaro', 'pyside6', 'pyyaml']
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+]
 
 [project.urls]
 Home = 'https://github.com/joaonc/show_dialog'
