--- a/assets/inputs/inputs_11.yaml
+++ b/assets/inputs/inputs_11.yaml
@@ -4,7 +4,7 @@ title: Timeout
 description: |
     This dialog has a timeout,
     after which it is dismissed
-    and returns 1 (error).
+    and returns an error code.
 timeout: 10
 timeout_pass: false
 timeout_text: '%v'
