--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ module = ['invoke', 'pytest_params', 'semantic_version', 'PySide6']
 [tool.pytest.ini_options]
 markers = ['pri_1', 'flaky', 'nightly', 'performance', 'manual']
 testpaths = ['tests']
+pythonpath = 'src'
 
 [build-system]
 requires = ['flit_core >=3.2,<4']
@@ -56,7 +57,9 @@ description = 'Easily show a dialog window for miscellaneous purposes.'
 readme = 'README.md'
 authors = [{name = 'Joao Coelho'}]
 license = {file = 'LICENSE.txt'}
+requires-python = '>=3.10'
 dependencies = ['markdown', 'mashumaro', 'pyside6', 'pyyaml']
+keywords = ['python', 'qt', 'qt6', 'testing', 'manual']
 classifiers = [
     "License :: OSI Approved :: MIT License",
 ]
@@ -70,3 +73,4 @@ show_dialog = 'show_dialog.main:main'
 
 [tool.flit.module]
 name = 'show_dialog'
+directory = 'src/show_dialog'
