--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,5 @@
+# When updating this file, update pyptoject.toml::project::dependencies
+
 markdown            # Convert markdown to html
 mashumaro           # JSON/YAML class serialization
 pyside6             # Qt
