--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ readme = 'README.md'
 authors = [{name = 'Joao Coelho'}]
 license = {file = 'LICENSE.txt'}
 requires-python = '>=3.10'
-dependencies = ['markdown', 'mashumaro', 'pyside6', 'pyyaml']
+dependencies = ['markdown', 'mashumaro', 'pyside6', 'pyyaml', 'qdarkstyle']
 keywords = ['python', 'qt', 'qt6', 'testing', 'manual']
 classifiers = [
     "License :: OSI Approved :: MIT License",
