ok/cancel buttons option

--- a/assets/inputs/inputs_10.yaml
+++ b/assets/inputs/inputs_10.yaml
@@ -25,4 +25,4 @@ description: |
         <p>This is <span class="highlight">highlighted</span> text.</p>
     </body>
     </html>
-buttons: Ok
+buttons: Ok/Cancel
