--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,14 +5,12 @@
 #    pip-compile requirements-dev.in
 #
 altgraph==0.17.4
-    # via
-    #   macholib
-    #   pyinstaller
+    # via pyinstaller
 bandit==1.7.9
     # via -r requirements-dev.in
 black==24.8.0
     # via -r requirements-dev.in
-build==1.2.1
+build==1.2.2
     # via pip-tools
 certifi==2024.8.30
     # via requests
@@ -24,6 +22,12 @@ click==8.1.7
     # via
     #   black
     #   pip-tools
+colorama==0.4.6
+    # via
+    #   bandit
+    #   build
+    #   click
+    #   pytest
 distlib==0.3.8
     # via virtualenv
 docutils==0.21.2
@@ -32,7 +36,7 @@ exceptiongroup==1.2.2 ; python_version < "3.11"
     # via
     #   -r requirements-dev.in
     #   pytest
-filelock==3.15.4
+filelock==3.16.0
     # via virtualenv
 flake8==7.1.1
     # via -r requirements-dev.in
@@ -40,9 +44,9 @@ flit==3.9.0
     # via -r requirements-dev.in
 flit-core==3.9.0
     # via flit
-identify==2.6.0
+identify==2.6.1
     # via pre-commit
-idna==3.8
+idna==3.9
     # via requests
 iniconfig==2.0.0
     # via pytest
@@ -50,8 +54,6 @@ invoke==2.2.0
     # via -r requirements-dev.in
 isort==5.13.2
     # via -r requirements-dev.in
-macholib==1.16.3
-    # via pyinstaller
 markdown==3.7
     # via -r requirements.txt
 markdown-it-py==3.0.0
@@ -83,9 +85,11 @@ pathspec==0.12.1
     # via black
 pbr==6.1.0
     # via stevedore
+pefile==2024.8.26
+    # via pyinstaller
 pip-tools==7.4.1
     # via -r requirements-dev.in
-platformdirs==4.2.2
+platformdirs==4.3.3
     # via
     #   black
     #   virtualenv
@@ -120,7 +124,7 @@ pyside6-essentials==6.7.2
     #   -r requirements.txt
     #   pyside6
     #   pyside6-addons
-pytest==8.3.2
+pytest==8.3.3
     # via
     #   -r requirements-dev.in
     #   pytest-params
@@ -129,6 +133,8 @@ pytest-params==0.2.0
     # via -r requirements-dev.in
 pytest-qt==4.4.0
     # via -r requirements-dev.in
+pywin32-ctypes==0.2.3
+    # via pyinstaller
 pyyaml==6.0.2
     # via
     #   -r requirements.txt
@@ -142,7 +148,7 @@ qtpy==2.4.1
     #   qdarkstyle
 requests==2.32.3
     # via flit
-rich==13.8.0
+rich==13.8.1
     # via bandit
 shiboken6==6.7.2
     # via
@@ -165,7 +171,7 @@ types-markdown==3.7.0.20240822
     # via -r requirements-dev.in
 types-pyyaml==6.0.12.20240808
     # via -r requirements-dev.in
-types-setuptools==74.0.0.20240831
+types-setuptools==74.1.0.20240907
     # via -r requirements-dev.in
 typing-extensions==4.12.2
     # via
@@ -173,9 +179,9 @@ typing-extensions==4.12.2
     #   black
     #   mashumaro
     #   mypy
-urllib3==2.2.2
+urllib3==2.2.3
     # via requests
-virtualenv==20.26.3
+virtualenv==20.26.4
     # via pre-commit
 wheel==0.44.0
     # via pip-tools
