--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -19,10 +19,14 @@ click==8.1.7
     #   -c requirements-dev.txt
     #   mkdocs
 colorama==0.4.6
-    # via mkdocs-material
+    # via
+    #   -c requirements-dev.txt
+    #   click
+    #   mkdocs
+    #   mkdocs-material
 ghp-import==2.1.0
     # via mkdocs
-idna==3.8
+idna==3.9
     # via
     #   -c requirements-dev.txt
     #   requests
@@ -69,7 +73,7 @@ pathspec==0.12.1
     # via
     #   -c requirements-dev.txt
     #   mkdocs
-platformdirs==4.2.2
+platformdirs==4.3.3
     # via
     #   -c requirements-dev.txt
     #   mkdocs-get-deps
@@ -90,7 +94,7 @@ pyyaml==6.0.2
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-regex==2024.7.24
+regex==2024.9.11
     # via mkdocs-material
 requests==2.32.3
     # via
@@ -98,9 +102,9 @@ requests==2.32.3
     #   mkdocs-material
 six==1.16.0
     # via python-dateutil
-urllib3==2.2.2
+urllib3==2.2.3
     # via
     #   -c requirements-dev.txt
     #   requests
-watchdog==5.0.1
+watchdog==5.0.2
     # via mkdocs
