--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -4,29 +4,27 @@
 #
 #    pip-compile requirements-docs.in
 #
-babel==2.16.0
+babel==2.17.0
     # via mkdocs-material
-certifi==2024.8.30
+backrefs==5.8
+    # via mkdocs-material
+certifi==2025.1.31
     # via
     #   -c requirements-dev.txt
     #   requests
-charset-normalizer==3.3.2
+charset-normalizer==3.4.1
     # via
     #   -c requirements-dev.txt
     #   requests
-click==8.1.7
+click==8.1.8
     # via
     #   -c requirements-dev.txt
     #   mkdocs
 colorama==0.4.6
-    # via
-    #   -c requirements-dev.txt
-    #   click
-    #   mkdocs
-    #   mkdocs-material
+    # via mkdocs-material
 ghp-import==2.1.0
     # via mkdocs
-idna==3.9
+idna==3.10
     # via
     #   -c requirements-dev.txt
     #   requests
@@ -41,7 +39,7 @@ markdown==3.7
     #   mkdocs
     #   mkdocs-material
     #   pymdown-extensions
-markupsafe==2.1.5
+markupsafe==3.0.2
     # via
     #   jinja2
     #   mkdocs
@@ -59,11 +57,11 @@ mkdocs-get-deps==0.2.0
     # via mkdocs
 mkdocs-glightbox==0.4.0
     # via -r requirements-docs.in
-mkdocs-material==9.5.34
+mkdocs-material==9.6.9
     # via -r requirements-docs.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-packaging==24.1
+packaging==24.2
     # via
     #   -c requirements-dev.txt
     #   mkdocs
@@ -73,15 +71,15 @@ pathspec==0.12.1
     # via
     #   -c requirements-dev.txt
     #   mkdocs
-platformdirs==4.3.3
+platformdirs==4.3.7
     # via
     #   -c requirements-dev.txt
     #   mkdocs-get-deps
-pygments==2.18.0
+pygments==2.19.1
     # via
     #   -c requirements-dev.txt
     #   mkdocs-material
-pymdown-extensions==10.9
+pymdown-extensions==10.14.3
     # via mkdocs-material
 python-dateutil==2.9.0.post0
     # via ghp-import
@@ -94,17 +92,15 @@ pyyaml==6.0.2
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-regex==2024.9.11
-    # via mkdocs-material
 requests==2.32.3
     # via
     #   -c requirements-dev.txt
     #   mkdocs-material
-six==1.16.0
+six==1.17.0
     # via python-dateutil
-urllib3==2.2.3
+urllib3==2.3.0
     # via
     #   -c requirements-dev.txt
     #   requests
-watchdog==5.0.2
+watchdog==6.0.0
     # via mkdocs
