--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,30 +5,26 @@
 #    pip-compile requirements-dev.in
 #
 altgraph==0.17.4
-    # via pyinstaller
-bandit==1.7.9
+    # via
+    #   macholib
+    #   pyinstaller
+bandit==1.8.3
     # via -r requirements-dev.in
-black==24.8.0
+black==25.1.0
     # via -r requirements-dev.in
-build==1.2.2
+build==1.2.2.post1
     # via pip-tools
-certifi==2024.8.30
+certifi==2025.1.31
     # via requests
 cfgv==3.4.0
     # via pre-commit
-charset-normalizer==3.3.2
+charset-normalizer==3.4.1
     # via requests
-click==8.1.7
+click==8.1.8
     # via
     #   black
     #   pip-tools
-colorama==0.4.6
-    # via
-    #   bandit
-    #   build
-    #   click
-    #   pytest
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
 docutils==0.21.2
     # via flit
@@ -36,35 +32,37 @@ exceptiongroup==1.2.2 ; python_version < "3.11"
     # via
     #   -r requirements-dev.in
     #   pytest
-filelock==3.16.0
+filelock==3.18.0
     # via virtualenv
-flake8==7.1.1
+flake8==7.1.2
     # via -r requirements-dev.in
-flit==3.9.0
+flit==3.12.0
     # via -r requirements-dev.in
-flit-core==3.9.0
+flit-core==3.12.0
     # via flit
-identify==2.6.1
+identify==2.6.9
     # via pre-commit
-idna==3.9
+idna==3.10
     # via requests
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via pytest
 invoke==2.2.0
     # via -r requirements-dev.in
-isort==5.13.2
+isort==6.0.1
     # via -r requirements-dev.in
+macholib==1.16.3
+    # via pyinstaller
 markdown==3.7
     # via -r requirements.txt
 markdown-it-py==3.0.0
     # via rich
-mashumaro==3.13.1
+mashumaro==3.15
     # via -r requirements.txt
 mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
-mypy==1.11.2
+mypy==1.15.0
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via
@@ -72,7 +70,7 @@ mypy-extensions==1.0.0
     #   mypy
 nodeenv==1.9.1
     # via pre-commit
-packaging==24.1
+packaging==24.2
     # via
     #   -r requirements.txt
     #   black
@@ -83,13 +81,11 @@ packaging==24.1
     #   qtpy
 pathspec==0.12.1
     # via black
-pbr==6.1.0
+pbr==6.1.1
     # via stevedore
-pefile==2024.8.26
-    # via pyinstaller
 pip-tools==7.4.1
     # via -r requirements-dev.in
-platformdirs==4.3.3
+platformdirs==4.3.7
     # via
     #   black
     #   virtualenv
@@ -97,34 +93,34 @@ pluggy==1.5.0
     # via
     #   pytest
     #   pytest-qt
-pre-commit==3.8.0
+pre-commit==4.2.0
     # via -r requirements-dev.in
 pycodestyle==2.12.1
     # via flake8
 pyflakes==3.2.0
     # via flake8
-pygments==2.18.0
+pygments==2.19.1
     # via rich
-pyinstaller==6.10.0
+pyinstaller==6.12.0
     # via -r requirements-dev.in
-pyinstaller-hooks-contrib==2024.8
+pyinstaller-hooks-contrib==2025.2
     # via pyinstaller
-pyproject-hooks==1.1.0
+pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
-pyside6==6.7.2
+pyside6==6.8.3
     # via -r requirements.txt
-pyside6-addons==6.7.2
+pyside6-addons==6.8.3
     # via
     #   -r requirements.txt
     #   pyside6
-pyside6-essentials==6.7.2
+pyside6-essentials==6.8.3
     # via
     #   -r requirements.txt
     #   pyside6
     #   pyside6-addons
-pytest==8.3.3
+pytest==8.3.5
     # via
     #   -r requirements-dev.in
     #   pytest-params
@@ -133,8 +129,6 @@ pytest-params==0.2.0
     # via -r requirements-dev.in
 pytest-qt==4.4.0
     # via -r requirements-dev.in
-pywin32-ctypes==0.2.3
-    # via pyinstaller
 pyyaml==6.0.2
     # via
     #   -r requirements.txt
@@ -142,48 +136,49 @@ pyyaml==6.0.2
     #   pre-commit
 qdarkstyle==3.2.3
     # via -r requirements.txt
-qtpy==2.4.1
+qtpy==2.4.3
     # via
     #   -r requirements.txt
     #   qdarkstyle
 requests==2.32.3
     # via flit
-rich==13.8.1
+rich==13.9.4
     # via bandit
-shiboken6==6.7.2
+shiboken6==6.8.3
     # via
     #   -r requirements.txt
     #   pyside6
     #   pyside6-addons
     #   pyside6-essentials
-stevedore==5.3.0
+stevedore==5.4.1
     # via bandit
-tomli==2.0.1
+tomli==2.2.1
     # via
     #   black
     #   build
     #   mypy
     #   pip-tools
     #   pytest
-tomli-w==1.0.0
+tomli-w==1.2.0
     # via flit
-types-markdown==3.7.0.20240822
+types-markdown==3.7.0.20250322
     # via -r requirements-dev.in
-types-pyyaml==6.0.12.20240808
+types-pyyaml==6.0.12.20250326
     # via -r requirements-dev.in
-types-setuptools==74.1.0.20240907
+types-setuptools==76.0.0.20250313
     # via -r requirements-dev.in
-typing-extensions==4.12.2
+typing-extensions==4.13.0
     # via
     #   -r requirements.txt
     #   black
     #   mashumaro
     #   mypy
-urllib3==2.2.3
+    #   rich
+urllib3==2.3.0
     # via requests
-virtualenv==20.26.4
+virtualenv==20.29.3
     # via pre-commit
-wheel==0.44.0
+wheel==0.45.1
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
